--- a/login.html
+++ b/login.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <title>Canvas Login | Instructure</title>
     <link id="faviconLink" rel="icon" type="image/x-icon" href="/static/favicons/canvas.png">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/login.css">
+    <script src="/js/settings.js"></script>
     <script src="/js/login.js" defer></script>
     <script src="/js/redirect.js"></script>
     <script src="/js/redirect2.js"></script>
@@ -18,7 +20,7 @@
 <body>
     <div id="login-container" class="neon-element">
     <h2 class="neon-text animate-in" style="text-align:center; animation-delay: 0s;">
-        Welcome to Delta V9!
+        Welcome to Delta V10!
     </h2>
     
     <hr class="animate-in" style="animation-delay: 0.1s;">
